--- a/AvaloniaApplication1/MainWindow.axaml
+++ b/AvaloniaApplication1/MainWindow.axaml
@@ -1,9 +1,29 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="AvaloniaApplication1.MainWindow"
-        Title="AvaloniaApplication1">
-    Welcome to Avalonia!
+<Window
+    x:Class="AvaloniaApplication1.MainWindow"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="AvaloniaApplication1"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <StackPanel HorizontalAlignment="Left">
+        <Button Click="Button_OnClick" Content="Change Orientation" />
+        <ProgressBar
+            Name="bar"
+            HorizontalAlignment="Left"
+            ShowProgressText="True"
+            Value="20" />
+        <ProgressBar
+            HorizontalAlignment="Left"
+            Orientation="Horizontal"
+            ShowProgressText="True"
+            Value="20" />
+        <ProgressBar
+            HorizontalAlignment="Left"
+            Orientation="Vertical"
+            ShowProgressText="True"
+            Value="20" />
+    </StackPanel>
 </Window>
